# ChangeLog for app-text/texlive-source
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  remove dep on t1lib, only needed for xdvi and dvipng which are external

  17 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  fix icu include dir

  08 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  +files/2007/texlive-core-2007-icu-xetex-execstacks.patch,
  texlive-core-2007.ebuild:
  fix exec stacks on xetex

  07 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  +files/2007/tetex-3.0_p1-xpdf-CVE-2007-3387.patch,
  texlive-core-2007.ebuild:
  import security fix from tetex

  05 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-source-2007.ebuild:
  add missing dep on fontconfig as reported by pchrist on freenode

  04 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-source-2007.ebuild:
  install dvipdfm from its own ebuild, install texmf-dist

  01 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-source-2007.ebuild:
  More verbose die messages, quote dir variables, patch by opfer

  01 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  +files/2007/tetex-3.0-CVE-2007-0650.patch, texlive-source-2007.ebuild:
  Add a patch from redhat for a buffer overflow in makeindex, see
  https://bugs.gentoo.org/show_bug.cgi?id=170861 and
  https://bugzilla.redhat.com/show_bug.cgi?id=225491

  29 Aug 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-source-2007.ebuild:
  Fix build with USE=doc, integrate binextra into this ebuild

  29 Aug 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-source-2007.ebuild:
  add some dies for mv's

  29 Aug 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-source-2007.ebuild:
  add a changelog
